--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img id="weather-img" />
         </div>
         <div class="temp hidden">
-            <p id="temperature"></p>
+            <p id="temperature">°C</p>
             <p id="description"></p>
         </div>
         <div class="details hidden">
